[gd_scene load_steps=14 format=3 uid="uid://b67q1pxib235p"]

[ext_resource type="Script" path="res://Scripts/Main Menu.gd" id="1_ko6bm"]
[ext_resource type="Texture2D" uid="uid://dpphcr1k2agyc" path="res://Assests/diddy_menu.png" id="2_l7b5p"]
[ext_resource type="Theme" uid="uid://cvhdupl0n7uja" path="res://Assests/menu_button_theme.tres" id="2_qcqh5"]
[ext_resource type="FontFile" uid="uid://bf0a4bnwbnayb" path="res://Assests/consolab.ttf" id="4_8inwh"]
[ext_resource type="Shader" path="res://Shaders/static.gdshader" id="5_yip1o"]
[ext_resource type="Texture2D" uid="uid://bwt1vhr7k54nh" path="res://icon.svg" id="6_2xujj"]

[sub_resource type="Animation" id="Animation_xu4hr"]
resource_name = "diddy_tweak"
loop_mode = 2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Diddy:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.149616, -6.91228e-05]
}

[sub_resource type="Animation" id="Animation_5a5op"]
resource_name = "intro_newspaper"
length = 2.0

[sub_resource type="AnimationLibrary" id="AnimationLibrary_m1ptl"]
_data = {
"diddy_tweak": SubResource("Animation_xu4hr"),
"intro_newspaper": SubResource("Animation_5a5op")
}

[sub_resource type="ShaderMaterial" id="ShaderMaterial_s0572"]
shader = ExtResource("5_yip1o")
shader_parameter/resolution = Vector2(320, 180)
shader_parameter/scan_line_amount = 1.0
shader_parameter/warp_amount = 0.1
shader_parameter/noise_amount = 0.03
shader_parameter/interference_amount = 0.2
shader_parameter/grille_amount = 0.1
shader_parameter/grille_size = 1.0
shader_parameter/vignette_amount = 0.6
shader_parameter/vignette_intensity = 0.4
shader_parameter/aberation_amount = 0.5
shader_parameter/roll_line_amount = 0.3
shader_parameter/roll_speed = 1.0
shader_parameter/scan_line_strength = -8.0
shader_parameter/pixel_strength = -2.0

[sub_resource type="Animation" id="Animation_rv4lo"]
resource_name = "fade_in"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_wy506"]
resource_name = "fade_out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Transition/ColorRect:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Transition/ColorRect:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_y2umu"]
_data = {
"fade_in": SubResource("Animation_rv4lo"),
"fade_out": SubResource("Animation_wy506")
}

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -6.0
offset_right = 3.0
offset_bottom = -6.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.76, 1.76)
script = ExtResource("1_ko6bm")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 491.0
offset_right = 156.0
offset_bottom = 617.0
scale = Vector2(0.897098, 0.897098)

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qcqh5")
text = "Play"

[node name="Quit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_qcqh5")
text = "Quit
"

[node name="DiddyTweak" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_m1ptl")
}
autoplay = "diddy_tweak"

[node name="Diddy" type="Sprite2D" parent="."]
position = Vector2(839, 367)
scale = Vector2(2.01552, 1.11998)
texture = ExtResource("2_l7b5p")

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 277.0
offset_bottom = 298.0
theme_override_fonts/font = ExtResource("4_8inwh")
theme_override_font_sizes/font_size = 65
text = "Five
Nights
at
Diddy's"

[node name="Static" type="Sprite2D" parent="."]
material = SubResource("ShaderMaterial_s0572")
position = Vector2(551.704, 306.818)
scale = Vector2(-9.0437, 5.40245)
texture = ExtResource("6_2xujj")

[node name="Transition" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_y2umu")
}

[node name="ColorRect" type="ColorRect" parent="Transition"]
visible = false
offset_left = -76.0
offset_top = -71.0
offset_right = -36.0
offset_bottom = -31.0
scale = Vector2(52.0872, 30.5158)
color = Color(0, 0, 0, 1)

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Quit" to="." method="_on_quit_pressed"]
[connection signal="animation_finished" from="Transition" to="." method="_on_transition_animation_finished"]
